# Mterm32

./: .gitignore  CMakeLists.txt  ESP32-Mterm.ino  Mterm32.ino  dev_readme.md  gps_module.cpp  gps_module.h  hardwareLayer.h  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c6-devkitc-1  ui.cpp
.claude/: settings.local.json
src/: CMakeLists.txt  main.cpp  page_dev.cpp  page_sat.cpp  page_settings.cpp  page_sport.cpp  page_start.cpp  page_summary.cpp  pages.h
src/app/: menu.cpp  menu.h  pages.h
src/app/pages/: page_dev.cpp  page_sat.cpp  page_settings.cpp  page_splash.cpp  page_sport.cpp  page_start.cpp  page_summary.cpp
src/board/: board.h
src/compat/: Arduino.h  compat.h  uart_hal.cpp  uart_hal.h
src/drv/: buttons.cpp  buttons.h  display.cpp  display.h  power.cpp  power.h
src/ext/TinyGPS/: LICENSE.LGPL-2.1.txt  TinyGPS++.h
src/lib/: canvas.h  kalman.cpp  kalman.h  trig_lut.h
src/svc/: config.cpp  config.h  gps.cpp  gps.h
